// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonStyle snapshot by default 1`] = `
.c0 {
  font-family: 'Circular Standard Bold',Arial,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  border-width: 2px;
  font-size: 11.2px;
  line-height: 20px;
  border-style: solid;
  padding: 0 10px;
  border-radius: 36px;
}

@media (min-width:360px) {
  .c0 {
    font-size: 12.6px;
    line-height: 23px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 14px;
    line-height: 26px;
  }
}

<button
  className="c0"
/>
`;

exports[`QualifyButtonStyle snapshot by default 1`] = `
.c0 {
  font-family: 'Circular Standard Bold',Arial,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  border-width: 2px;
  font-size: 11.2px;
  line-height: 20px;
  border-style: solid;
  padding: 0 10px;
  border-radius: 36px;
  background-color: rgb(255,255,255);
}

@media (min-width:360px) {
  .c0 {
    font-size: 12.6px;
    line-height: 23px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 14px;
    line-height: 26px;
  }
}

<button
  className="cjkow5-0 c0"
/>
`;
